[package]
name = "portguard"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.4"
memmap2 = "0.5.3"
object = "0.28.3"
clap = { version = "3.1.8", features = ["derive", "env"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "io-util", "macros", "net", "time", "sync"] }
futures = "0.3"
snowstorm = { path = "snowstorm", version = "0.3.1" }
fast-socks5 = "0.8.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
base64 = "0.13.0"
curve25519-dalek = "4.0.0-pre.2" # for deriving pubkey from prikey
yamux = "0.10.1" # for impl reverse proxy
tokio-util = { version = "0.7.2", features = ["compat"] }

[profile.release]
strip = true
lto = true # file size