[package]
name = "portguard"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.4"
memmap2 = "0.5.3"
object = "0.28.3"
clap = { version = "3.1.8", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "macros", "net", "sync"] }
futures = "0.3"
snowstorm = { path = "snowstorm", version = "0.3.1" }
fast-socks5 = "0.8.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
base64 = "0.13.0"
curve25519-dalek = "4.1.2" # for deriving pubkey from prikey
yamux = "0.10.1" # for impl reverse proxy
tokio-util = { version = "0.7.2", features = ["compat"] }
blake2 = "0.10.4"
backoff = { version = "0.4", features = ["tokio"] }
dashmap = "5.3.4"
chacha20poly1305 = { version = "0.9.1", features = ["std"] }
rpassword = "6.0"
anyhow = "1"

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1

[[example]]
name = "pgcli"
path = "examples/client-lib.rs"
crate-type = ["cdylib"]
